--- a/exploratoria.ipynb
+++ b/exploratoria.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Para o trabalho da disciplina Introdução a Ciência de Dados, será feita uma análise exploratória a partir de um banco de dados de livre escolha. \\n\n",
+    "## para tal trabalho foi escolhida movimentação de tréfego internacional referente ao mês de dezembro do ano de 2023, a partir de dados coletados em relação ao Brasil."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Em primeira instância foram importadas as bibliotecas necessária para leitura do arquivos, cálculos matemáticos e construção de gráficos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,12 +27,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Com a biblioteca pandas foi possível a leitura do banco de dados disponível em (\"https://servicos.dpf.gov.br/dadosabertos/STI/\"), e assim foi criado um dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('STI_MOVIMENTO_2023_12.csv', delimiter=';', encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Para verificação do carregamento correto de todos os dados no dataframe foram utilizados os comandos head() e tail(), que permitem a visualização dos primeiros e ultimos dados do dataframe, respectivamente."
    ]
   },
   {
@@ -325,6 +354,13 @@
    "source": [
     "df.tail(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
