thid commit again

--- a/exploratoria.ipynb
+++ b/exploratoria.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Para o trabalho da disciplina Introdução a Ciência de Dados, será feita uma análise exploratória a partir de um banco de dados de livre escolha. \\n\n",
-    "## para tal trabalho foi escolhida movimentação de tréfego internacional referente ao mês de dezembro do ano de 2023, a partir de dados coletados em relação ao Brasil."
+    "# Para o trabalho da disciplina Introdução a Ciência de Dados, será feita uma análise exploratória a partir de um banco de dados de livre escolha. Para tal trabalho foi escolhida movimentação de tréfego internacional referente ao mês de dezembro do ano de 2023, a partir de dados coletados em relação ao Brasil."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Em primeira instância foram importadas as bibliotecas necessária para leitura do arquivos, cálculos matemáticos e construção de gráficos"
+    "## Em primeira instância foram importadas as bibliotecas necessária para leitura do arquivos, cálculos matemáticos e construção de gráficos"
    ]
   },
   {
@@ -30,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Com a biblioteca pandas foi possível a leitura do banco de dados disponível em (\"https://servicos.dpf.gov.br/dadosabertos/STI/\"), e assim foi criado um dataframe."
+    "## Com a biblioteca pandas foi possível a leitura do banco de dados disponível em (\"https://servicos.dpf.gov.br/dadosabertos/STI/\"), e assim foi criado um dataframe."
    ]
   },
   {
@@ -46,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Para verificação do carregamento correto de todos os dados no dataframe foram utilizados os comandos head() e tail(), que permitem a visualização dos primeiros e ultimos dados do dataframe, respectivamente."
+    "## Para verificação do carregamento correto de todos os dados no dataframe foram utilizados os comandos head() e tail(), que permitem a visualização dos primeiros e ultimos dados do dataframe, respectivamente."
    ]
   },
   {
