--- a/exploratoria.ipynb
+++ b/exploratoria.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('STI_MOVIMENTO_2023_12.csv', delimiter=';', encoding='latin-1')"
+    "df_sti = pd.read_csv('STI_MOVIMENTO_2023_12.csv', delimiter=';', encoding='latin-1')"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,18 +192,18 @@
        "9  VENEZUELA                                   16  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(10)"
+    "df_sti.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,21 +345,314 @@
        "11391  PARAGUAI                                      1  "
       ]
      },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sti.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11392"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_sti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11392, 5)"
+      ]
+     },
      "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail(10)"
+    "df_sti.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sti.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_sti.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['UF_ATENDIMENTO', 'TIPO', 'CLASSIFICACAO', 'NACIONALIDADE', 'TOTAL'], dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sti.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_sti.sort_values(by='TOTAL', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF_ATENDIMENTO</th>\n",
+       "      <th>TIPO</th>\n",
+       "      <th>CLASSIFICACAO</th>\n",
+       "      <th>NACIONALIDADE</th>\n",
+       "      <th>TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6729</th>\n",
+       "      <td>RJ</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>OUTROS</td>\n",
+       "      <td>CHILE</td>\n",
+       "      <td>998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10239</th>\n",
+       "      <td>SP</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>VISITANTE</td>\n",
+       "      <td>RÚSSIA</td>\n",
+       "      <td>997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8726</th>\n",
+       "      <td>SP</td>\n",
+       "      <td>ENTRADA</td>\n",
+       "      <td>PERMANENTE</td>\n",
+       "      <td>PORTUGAL</td>\n",
+       "      <td>992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3665</th>\n",
+       "      <td>PA</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>VISITANTE</td>\n",
+       "      <td>ESTADOS UNIDOS</td>\n",
+       "      <td>990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9892</th>\n",
+       "      <td>SP</td>\n",
+       "      <td>ENTRADA</td>\n",
+       "      <td>TEMPORÁRIO</td>\n",
+       "      <td>CHINA</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8329</th>\n",
+       "      <td>SC</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>VISITANTE</td>\n",
+       "      <td>ARGENTINA</td>\n",
+       "      <td>#####</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3045</th>\n",
+       "      <td>MG</td>\n",
+       "      <td>ENTRADA</td>\n",
+       "      <td>OUTROS</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>#####</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6025</th>\n",
+       "      <td>RJ</td>\n",
+       "      <td>ENTRADA</td>\n",
+       "      <td>OUTROS</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>#####</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6133</th>\n",
+       "      <td>RJ</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>VISITANTE</td>\n",
+       "      <td>ARGENTINA</td>\n",
+       "      <td>#####</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10163</th>\n",
+       "      <td>SP</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>VISITANTE</td>\n",
+       "      <td>ESTADOS UNIDOS</td>\n",
+       "      <td>#####</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11392 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      UF_ATENDIMENTO     TIPO CLASSIFICACAO  \\\n",
+       "6729              RJ  SAIDA      OUTROS       \n",
+       "10239             SP  SAIDA      VISITANTE    \n",
+       "8726              SP  ENTRADA    PERMANENTE   \n",
+       "3665              PA  SAIDA      VISITANTE    \n",
+       "9892              SP  ENTRADA    TEMPORÁRIO   \n",
+       "...              ...      ...           ...   \n",
+       "8329              SC  SAIDA      VISITANTE    \n",
+       "3045              MG  ENTRADA    OUTROS       \n",
+       "6025              RJ  ENTRADA    OUTROS       \n",
+       "6133              RJ  SAIDA      VISITANTE    \n",
+       "10163             SP  SAIDA      VISITANTE    \n",
+       "\n",
+       "                                  NACIONALIDADE  TOTAL  \n",
+       "6729   CHILE                                       998  \n",
+       "10239  RÚSSIA                                      997  \n",
+       "8726   PORTUGAL                                    992  \n",
+       "3665   ESTADOS UNIDOS                              990  \n",
+       "9892   CHINA                                        99  \n",
+       "...                                         ...    ...  \n",
+       "8329   ARGENTINA                                 #####  \n",
+       "3045   BRASIL                                    #####  \n",
+       "6025   BRASIL                                    #####  \n",
+       "6133   ARGENTINA                                 #####  \n",
+       "10163  ESTADOS UNIDOS                            #####  \n",
+       "\n",
+       "[11392 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UF_ATENDIMENTO                                          SP\n",
+       "TIPO                                               SAIDA  \n",
+       "CLASSIFICACAO                                   VISITANTE \n",
+       "NACIONALIDADE     ÍNDIA                                   \n",
+       "TOTAL                                                  998\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sti.max()"
+   ]
   }
  ],
  "metadata": {
